--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,14 @@ sphinx-autodoc-typehints = "*"
 jupytext = "*"
 jupyter = "*"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
 
 
 
@@ -46,6 +51,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 
