--- a/dev_packages/chatsky_llm_autoconfig/pyproject.toml
+++ b/dev_packages/chatsky_llm_autoconfig/pyproject.toml
@@ -20,6 +20,9 @@ numpy = "<2.0"
 torch="2.2.2"
 sentence-transformers = "*"
 datasets = "*"
+spacy = '*'
+en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
+scikit-learn = "*"
 
 
 [build-system]
