--- a/dev_packages/chatsky_llm_autoconfig/pyproject.toml
+++ b/dev_packages/chatsky_llm_autoconfig/pyproject.toml
@@ -14,6 +14,7 @@ chatsky = "^0.8.0"
 matplotlib = "^3.9.2"
 langchain-community = "^0.3.1"
 langchain-huggingface = "^0.1.2"
+langchain-chroma = "*"
 scipy = "*"
 pydantic = "*"
 numpy = "<2.0"
