--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "chatsky-llm-autoconfiguration"
+name = "dialogue2graph"
 version = "0.1.0"
 description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
 authors = ["askatasuna <andruhabobr@gmail.com>"]
@@ -8,12 +8,19 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
-chatsky_llm_autoconfig = {path = "dev_packages/chatsky_llm_autoconfig", develop = true}
 tqdm = "^4.66.5"
 poethepoet = "^0.29.0"
 pandas = "^2.2.3"
 colorama = "^0.4.6"
 pyarrow = "^18.0.0"
+networkx = "^3.3"
+langchain = "^0.3.1"
+langchain-openai = "^0.2.1"
+chatsky = "^0.8.0"
+matplotlib = "^3.9.2"
+langchain-community = "^0.3.1"
+scipy = "*"
+pydantic = "*"
 
 [tool.poetry.group.docs]
 optional = true
