--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
 authors = ["askatasuna <andruhabobr@gmail.com>"]
 readme = "README.md"
-package-mode = false
+package-mode = true
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
