All branches are now tested

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,7 @@ name: codestyle
 
 on:
   push:
-    branches:
-    - dev
-    - master
-    - test/**
+    branches: '**'
   pull_request:
     branches:
     - dev
