--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: codestyle
+name: tests
 
 on:
   push:
@@ -28,6 +28,6 @@ jobs:
           python -m pip install --upgrade pip poetry
           python -m poetry install --with tests --no-ansi --no-interaction
 
-      - name: run codestyle
+      - name: run tests
         run: |
           python -m poetry run poe test
