Changed naming once more

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/master' }}
 
 jobs:
-  lint:
+  test_ubuntu_latest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
