removed "use_cache", using "seed" instead, added user in database

--- a/prompt_cache/docker-compose.yml
+++ b/prompt_cache/docker-compose.yml
@@ -20,6 +20,16 @@ services:
 
       - 5432:5432
 
+    environment:
+
+      - POSTGRES_USER=${POSTGRES_USER}
+
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+
+      - PROMPT_CACHE_USER=${PROMPT_CACHE_USER}
+
+      - PROMPT_CACHE_PASSWORD=${PROMPT_CACHE_PASSWORD}
+
     networks:
 
       - postgres-network
