--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ chatsky = "^0.8.0"
 matplotlib = "^3.9.2"
 langchain-community = "^0.3.1"
 pydantic = "*"
+scipy = "^1.15.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -55,6 +56,7 @@ build-backend = "poetry.core.masonry.api"
 
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -63,6 +65,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 
