--- a/prompt_cache/docker-compose.yml
+++ b/prompt_cache/docker-compose.yml
@@ -26,9 +26,11 @@ services:
 
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
-      - PROMPT_CACHE_USER=${PROMPT_CACHE_USER}
+      - POSTGRES_DB=prompt_cache_db
 
-      - PROMPT_CACHE_PASSWORD=${PROMPT_CACHE_PASSWORD}
+      - PROMPT_CACHE_USER=prompt_cache_user
+
+      - PROMPT_CACHE_PASSWORD=prompt_password
 
     networks:
 
