Feat/prompt caching (#18)
* Working on prompt caching

* Improved logging

* removed "use_cache", using "seed" instead, added user in database

* updated sql init

* Simplified pipeline

* Updated poetry.lock

* Improved lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ chatsky = "^0.8.0"
 matplotlib = "^3.9.2"
 langchain-community = "^0.3.1"
 pydantic = "*"
+psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
 
 [tool.poetry.group.docs]
@@ -45,6 +46,9 @@ ipykernel = "^6.29.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+
 
 
 
