--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = true
 
 [tool.poetry.dependencies]
-python = "^3.10,<3.12"
+python = "^3.10,<3.13"
 tqdm = "^4.66.5"
 poethepoet = "^0.29.0"
 pandas = "^2.2.3"
@@ -21,6 +21,7 @@ langchain-community = "^0.3.1"
 pydantic = "*"
 psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
+datasets = "*"
 
 [tool.poetry.group.docs]
 optional = true
