--- a/experiments/exp2025_03_09_push_to_hub/pyproject.toml
+++ b/experiments/exp2025_03_09_push_to_hub/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
 name = "exp2025-03-09-push-to-hub"
 version = "0.1.0"
-description = ""
-authors = ["Yuri Peshkichev <yuri.peshkichev@gmail.com>"]
+description = "push generated dia2graph dataset to huggingface"
+authors = ["Yuri Peshkichev"]
 readme = "README.md"
-packages = [{include = "exp2025_03_09_push_to_hub", from = "src"}]
+packages = [{include = "exp2025_02_07_example", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.13"
-datasets = "*"
-dialogue2graph = {path = "../.."}
+ruff = "^0.9.10"
+
 
 [build-system]
 requires = ["poetry-core"]
