--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ langchain-community = "^0.3.1"
 pydantic = "*"
 psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
+sentence-transformers = "^3.4.1"
 
 [tool.poetry.group.docs]
 optional = true
@@ -47,6 +48,7 @@ ipykernel = "^6.29.5"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -55,6 +57,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 [tool.poetry.group.tests]
 optional = true
