fixes+topic_generation experiment

--- a/experiments/exp2025_03_12_topic_generation/pyproject.toml
+++ b/experiments/exp2025_03_12_topic_generation/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
 dialogue2graph = {path = "../.."}
+langchain-chroma = "^0.2.2"
 
 
 [build-system]
