--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = "*"
 psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
 click = "^8.1.8"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -49,6 +50,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -57,6 +59,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 [tool.poetry.group.tests]
