Added pygraphviz to the dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
 sentence-transformers = "^3.4.1"
 datasets = "*"
+pygraphviz = "^1.14"
 
 [tool.poetry.group.docs]
 optional = true
@@ -50,6 +51,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -58,6 +60,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 [tool.poetry.group.tests]
