--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -21,16 +21,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: set up python '3.11'
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y graphviz libgraphviz-dev python3.11-dev
+
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: setup poetry and install dependencies
+      - name: Setup poetry and install dependencies
         run: |
           python -m pip install --upgrade pip poetry
           python -m poetry install --with lint --no-ansi --no-interaction
 
-      - name: run codestyle
+      - name: Run codestyle
         run: |
           python -m poetry run poe lint
