Change build command

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -41,7 +41,7 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_BOT_USERNAME: ${{ secrets.TG_BOT_USERNAME }}
         run: |
-          python -m poetry run sphinx-build -M html docs/source/ docs/build/
+          python -m poetry run sphinx-build -b html docs/source/ docs/build/
 
       - name: remove jekyll theming
         run: touch docs/build/.nojekyll
