--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,6 @@ format = "scripts.codestyle:_run_black(modify=True)"
 test = "scripts.test:_test"
 metrics = "scripts.metrics:_run_check"
 lint.sequence = ["flake", "black"]
+
+[tool.poetry.scripts]
+dialogue2graph = "dialogue2graph.cli.main:cli"
