--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/cfg.yml
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/cfg.yml
@@ -5,7 +5,7 @@ models:
   validation-model:
     name: o3-mini
     temperature: 1
-  embedder-model:
+  sim-model:
     name: "BAAI/bge-m3"
     device: "cuda:0"
   filler-model:
