output_fix parser added

--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/cfg.yml
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/cfg.yml
@@ -17,3 +17,6 @@ models:
   extender-model:
     name: chatgpt-4o-latest
     temperature: 0
+  formatter-model:
+    name: gpt-4o-mini
+    temperature: 0
