--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -37,11 +37,8 @@ jobs:
           python -m poetry install --with docs --all-extras --no-ansi --no-interaction
 
       - name: build documentation
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_BOT_USERNAME: ${{ secrets.TG_BOT_USERNAME }}
         run: |
-          python -m poetry run sphinx-build -M html docs/source/ docs/build/
+          python -m poetry run sphinx-build -b html docs/source/ docs/build/
 
       - name: remove jekyll theming
         run: touch docs/build/.nojekyll
@@ -63,10 +60,20 @@ jobs:
           path: docs/build/
           retention-days: 3
 
-      - name: deploy website
+      - name: deploy website for master
         if: ${{ github.ref == 'refs/heads/master' }}
         uses: JamesIves/github-pages-deploy-action@v4.6.4
         with:
           branch: gh-pages
           folder: docs/build/
+          target-folder: / # Deploy to root for master branch
           single-commit: True
+
+      - name: deploy website for dev
+        if: ${{ github.ref == 'refs/heads/dev' }}
+        uses: JamesIves/github-pages-deploy-action@v4.6.4
+        with:
+          branch: gh-pages
+          folder: docs/build/
+          target-folder: dev # Deploy to /dev subdirectory
+          single-commit: false # Keep history for dev branch
