--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ psycopg2-binary = "^2.9.10"
 scipy = "^1.15.2"
 sentence-transformers = "^3.4.1"
 datasets = "*"
+click = "^8.1.8"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.docs]
 optional = true
