--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ sentence-transformers = "^3.4.1"
 datasets = "*"
 click = "^8.1.8"
 pyyaml = "^6.0.2"
+langchain-chroma = "^0.2.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -52,6 +53,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -60,6 +62,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 [tool.poetry.group.tests]
