Fixing theming for github pages

--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: build documentation
         run: |
-          python -m poetry run sphinx-build -b html docs/source/ docs/build/
+          python -m poetry run sphinx-build -b html -a docs/source/ docs/build/
 
       - name: remove jekyll theming
         run: touch docs/build/.nojekyll
