--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -35,10 +35,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           python -m poetry install --with docs --all-extras --no-ansi --no-interaction
+          # Explicitly install theme dependencies
+          python -m poetry run pip install pydata-sphinx-theme
 
       - name: build documentation
         run: |
           python -m poetry run sphinx-build -b html -a docs/source/ docs/build/
+
+      - name: check build contents
+        run: |
+          echo "Checking build directory contents:"
+          ls -la docs/build/
+          echo "Checking for CSS files:"
+          find docs/build/ -name "*.css"
+  
 
       - name: remove jekyll theming
         run: touch docs/build/.nojekyll
