--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -35,12 +35,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           python -m poetry install --with docs --all-extras --no-ansi --no-interaction
-          # Explicitly install theme dependencies
-          python -m poetry run pip install pydata-sphinx-theme
+          # Explicitly install theme and its dependencies
+          python -m poetry run pip install pydata-sphinx-theme sphinx-copybutton
 
       - name: build documentation
         run: |
-          python -m poetry run sphinx-build -b html -a docs/source/ docs/build/
+          # Force clean build
+          rm -rf docs/build/
+          python -m poetry run sphinx-build -b html -a -E docs/source/ docs/build/
 
       - name: check build contents
         run: |
