--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,13 @@ langchain-chroma = "^0.2.2"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "*"
+sphinx = "^8.1.3"
 nbsphinx = "*"
 sphinx-favicon = "*"
 sphinx-gallery = "*"
-sphinx-copybutton = "*"
+sphinx-copybutton = "^0.5.2"
 sphinxcontrib-katex = "*"
-pydata-sphinx-theme = "*"
+pydata-sphinx-theme = "^0.16.1"
 sphinxcontrib-apidoc = "*"
 sphinxcontrib-httpdomain = "*"
 sphinx-autodoc-typehints = "*"
