fix pydantic validation bug, change ThreeStagesGraphGenerator init signature to take strings as an input, simplify work with ModelStorage in the pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ datasets = "*"
 click = "^8.1.8"
 pyyaml = "^6.0.2"
 langchain-chroma = "^0.2.2"
+langchain-huggingface = "^0.1.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -54,6 +55,7 @@ build-backend = "poetry.core.masonry.api"
 
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
@@ -62,6 +64,7 @@ flake8 = "*"
 isort = "*"
 black = "*"
 mypy = "*"
+
 
 
 
