--- a/examples/pipeline_usage/models_config.yml
+++ b/examples/pipeline_usage/models_config.yml
@@ -1,13 +1,12 @@
 d2g_llm_filling_llm:v1:
   name: o3-mini
   temperature: 1
-d2g_llm_formatting_llm:v1:
-  model: gpt-4o-mini
-  temperature: 0
 d2g_llm_grouping_llm:v1:
   name: gpt-4o-latest
   temperature: 0
 d2g_llm_sim_model:v1:
   model_kwargs:
-    device: cuda:0
-  model_name: BAAI/bge-m3
+    device: cpu
+  model_name: cointegrated/LaBSE-en-ru
+my_model:
+  name: gpt-3.5-turbo
