--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: run tests
         run: |
-          python -m poetry run poe test
+          python -m poetry run poe test || exit 1
