update test workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ default_task_type = "script"
 flake = "scripts.codestyle:_run_flake"
 black = "scripts.codestyle:_run_black(modify=False)"
 format = "scripts.codestyle:_run_black(modify=True)"
-test = "scripts.test:_test"
+test = "scripts.test:quick_test"
 metrics = "scripts.metrics:_run_check"
 lint.sequence = ["flake", "black"]
 
