--- a/examples/pipeline_usage/models_config.yml
+++ b/examples/pipeline_usage/models_config.yml
@@ -1,12 +1,20 @@
 d2g_llm_filling_llm:v1:
-  name: o3-mini
-  temperature: 1
+  config:
+    name: o3-mini
+    temperature: 1
+  model_type: llm
 d2g_llm_grouping_llm:v1:
-  name: gpt-4o-latest
-  temperature: 0
+  config:
+    name: gpt-4o-latest
+    temperature: 0
+  model_type: llm
 d2g_llm_sim_model:v1:
-  model_kwargs:
-    device: cpu
-  model_name: cointegrated/LaBSE-en-ru
+  config:
+    model_kwargs:
+      device: cpu
+    model_name: cointegrated/LaBSE-en-ru
+  model_type: emb
 my_model:
-  name: gpt-3.5-turbo
+  config:
+    name: gpt-3.5-turbo
+  model_type: llm
