fix civerage invocation, add accelerate to fix transformers bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ click = "^8.1.8"
 pyyaml = "^6.0.2"
 langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
+accelerate = "^1.6.0"
 
 [tool.poetry.group.docs]
 optional = true
@@ -54,11 +55,13 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
 
 [tool.poetry.group.tests]
 optional = true
