--- a/tests/cfg.yml
+++ b/tests/cfg.yml
@@ -1,26 +1,27 @@
-extending_llm:
+d2g_llm_extending_llm:v1:
   config:
     model_name: chatgpt-4o-latest
     temperature: 0
   model_type: llm
-filling_llm:
+d2g_llm_filling_llm:v1:
   config:
     model_name: o3-mini
     temperature: 1
   model_type: llm
-formatting_llm:
+d2g_llm_formatting_llm:v1:
   config:
     model_name: gpt-4o-mini
     temperature: 0
   model_type: llm
-grouping_llm:
+d2g_llm_grouping_llm:v1:
   config:
     model_name: chatgpt-4o-latest
     temperature: 0
   model_type: llm
-sim_model:
+d2g_llm_sim_model:v1:
   config:
     model_kwargs:
       device: cuda:0
     model_name: BAAI/bge-m3
   model_type: emb
+  
