--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ pyyaml = "^6.0.2"
 langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
 accelerate = "^1.6.0"
+unstructured = {extras = ["md"], version = "^0.17.2"}
+nltk = "^3.9.1"
 
 [tool.poetry.group.docs]
 optional = true
@@ -55,11 +57,13 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
 
 [tool.poetry.group.tests]
 optional = true
