Added autoapi to enviroment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pyyaml = "^6.0.2"
 langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
 accelerate = "^1.6.0"
+autoapi = "^2.0.1"
 
 [tool.poetry.group.docs]
 optional = true
@@ -40,11 +41,11 @@ sphinx-gallery = "*"
 sphinx-copybutton = "^0.5.2"
 sphinxcontrib-katex = "*"
 pydata-sphinx-theme = "^0.16.1"
-sphinxcontrib-apidoc = "*"
 sphinxcontrib-httpdomain = "*"
 sphinx-autodoc-typehints = "*"
 jupytext = "*"
 jupyter = "*"
+autoapi = "*"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -56,11 +57,13 @@ build-backend = "poetry.core.masonry.api"
 
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
 
 
 [tool.poetry.group.tests]
