--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,7 @@ langchain-openai = "^0.2.1"
 matplotlib = "^3.9.2"
 langchain-community = "^0.3.1"
 pydantic = "*"
-scipy = "^1.15.2"
 sentence-transformers = "^3.4.1"
-datasets = "*"
 click = "^8.1.8"
 pyyaml = "^6.0.2"
 langchain-chroma = "^0.2.2"
@@ -48,10 +46,14 @@ jupyter = "*"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
+deptry = "^0.23.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+
 
 
 
@@ -60,6 +62,9 @@ optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
+
+
 
 
 [tool.poetry.group.tests]
