fix: update documentation link in workflow

--- a/.github/workflows/build_and_publish_docs.yml
+++ b/.github/workflows/build_and_publish_docs.yml
@@ -90,4 +90,4 @@ jobs:
 
       - name: print link to the documentation
         run: |
-          echo "https://deeppavlov.github.io/chatsky-llm-autoconfig/${{ github.head_ref || github.ref_name }}"
+          echo "https://deeppavlov.github.io/dialogue2graph/${{ github.head_ref || github.ref_name }}"
