closure in class for model_type

--- a/tests/cli/cfg.yml
+++ b/tests/cli/cfg.yml
@@ -2,26 +2,26 @@ d2g_llm_extending_llm:v1:
   config:
     model_name: chatgpt-4o-latest
     temperature: 0
-  model_type: llm
+  model_type: ChatOpenAI
 d2g_llm_filling_llm:v1:
   config:
     model_name: o3-mini
     temperature: 1
-  model_type: llm
+  model_type: ChatOpenAI
 d2g_llm_formatting_llm:v1:
   config:
     model_name: gpt-4o-mini
     temperature: 0
-  model_type: llm
+  model_type: ChatOpenAI
 d2g_llm_grouping_llm:v1:
   config:
     model_name: chatgpt-4o-latest
     temperature: 0
-  model_type: llm
+  model_type: ChatOpenAI
 d2g_llm_sim_model:v1:
   config:
     model_kwargs:
       device: cuda:0
     model_name: BAAI/bge-m3
-  model_type: emb
+  model_type: HuggingFaceEmbeddings
   
