Fix autoapi package name in .toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ sphinxcontrib-httpdomain = "*"
 sphinx-autodoc-typehints = "*"
 jupytext = "*"
 jupyter = "*"
-autoapi = "*"
+sphinx-autoapi = "*"
 
 
 [tool.poetry.group.dev.dependencies]
