--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -13,15 +13,20 @@ concurrency:
     cancel-in-progress: ${{ github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/main' }}
 
 jobs:
-  test_ubuntu_latest:
-    runs-on: ubuntu-latest
+  test_full:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+        os: [macOS-latest, windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: set up python '3.11'
+      - name: set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
 
       - name: setup poetry and install dependencies
         run: |
@@ -34,7 +39,7 @@ jobs:
       - name: install release
         run: |
           python -m venv test_env && source test_env/bin/activate
-          pip install ./dist/your_package_name-*.whl
+          pip install ./dist/dialogue2graph-*.whl
 
       - name: Test installed package
         run: |
