fix: specify shell for test installed package step in test_release workflow

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -42,6 +42,7 @@ jobs:
           pip install ./dist/dialogue2graph-*.whl
 
       - name: Test installed package
+        shell: bash
         run: |
           python -m venv test_env
           source test_env/bin/activate
