fix: update project description and author information in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "dialogue2graph"
 version = "0.1.0"
-description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
-authors = ["askatasuna <andruhabobr@gmail.com>"]
+description = "Dialogue2Graph is a project for creating dialogue graphs based on input dialogues."
+authors = ["Chirkin Andrey <andruhabobr@gmail.com>"]
 readme = "README.md"
 package-mode = true
 
