trying to fix workflow issues related to windows and macos

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -43,4 +43,11 @@ jobs:
           . ${GITHUB_WORKSPACE}/test_env/bin/activate || . ${GITHUB_WORKSPACE}/test_env/Scripts/activate
           pip install ./dist/*.whl
           pip install pytest
-          python -m pytest
+          # Debug information
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          # Run pytest with verbose output and show where it's looking for tests
+          python -m pytest -v --collect-only
+          # Actually run the tests with explicit path
+          python -m pytest tests/ -v
