Autoapi for autogenerating docs (#47)
* Add docs and contributing readme

* Change docs structure

* Add automatic doc build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,11 @@ sphinx-gallery = "*"
 sphinx-copybutton = "^0.5.2"
 sphinxcontrib-katex = "*"
 pydata-sphinx-theme = "^0.16.1"
-sphinxcontrib-apidoc = "*"
 sphinxcontrib-httpdomain = "*"
 sphinx-autodoc-typehints = "*"
 jupytext = "*"
 jupyter = "*"
+sphinx-autoapi = "*"
 
 
 [tool.poetry.group.dev.dependencies]
