--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "dialogue2graph"
 version = "0.1.0"
 description = "Dialogue2Graph is a project for creating dialogue graphs based on input dialogues."
-authors = ["Denis Kuznetsov <kuznetsov.den.p@gmail.com>, Chirkin Andrey <andruhabobr@gmail.com>, Anastasia Voznyuk, Anna Mikhailova, Maria Molchanova, Yuri Peshkichev"]
+authors = ["Denis Kuznetsov <kuznetsov.den.p@gmail.com>, Chirkin Andrey <andruhabobr@gmail.com>, Anastasia Voznyuk <>, Anna Mikhailova <>, Maria Molchanova <>, Yuri Peshkichev <>"]
 readme = "README.md"
 package-mode = true
 
