Add pygraphviz and psycopg2-binary dependencies; clean up pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
 accelerate = "^1.6.0"
 unstructured = {extras = ["md"], version = "^0.17.2"}
+pygraphviz = "^1.14"
 
 [tool.poetry.group.docs]
 optional = true
@@ -45,6 +46,7 @@ sphinx-autoapi = "*"
 
 
 [tool.poetry.group.dev.dependencies]
+psycopg2-binary = "^2.9.10"
 ipykernel = "^6.29.5"
 deptry = "^0.23.0"
 
@@ -53,20 +55,11 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
-
-
-
-
-
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
-
-
-
-
 
 
 [tool.poetry.group.tests]
