--- a/prompt_cache/docker-compose.yml
+++ b/prompt_cache/docker-compose.yml
@@ -1,48 +1,31 @@
 services:
 
   db:
-
     image: postgres
-
     restart: always
-
     env_file:
-
       - .env
 
     volumes:
-
       - ./postgres-data:/var/lib/postgresql/data/
-
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
     ports:
-
       - 5432:5432
 
     environment:
-
-      - POSTGRES_USER=${POSTGRES_USER}
-
+      - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-
-      - POSTGRES_DB=prompt_cache_db
-
-      - PROMPT_CACHE_USER=prompt_cache_user
-
-      - PROMPT_CACHE_PASSWORD=prompt_password
+      - PROMPT_CACHE_PASSWORD=${PROMPT_CACHE_PASSWORD}
 
     networks:
-
       - postgres-network
+    command: ["postgres", "-c", "app.prompt_cache_password=${PROMPT_CACHE_PASSWORD}"]
 
 volumes:
-
   pgdata:
 
 
 networks:
-
   postgres-network:
-
     driver: bridge
