--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ test = "scripts.test:quick_test"
 coverage = "scripts.test:coverage"
 lint = "scripts.codestyle:_check"
 format = "scripts.codestyle:_format"
-check_dg_metrics = "scripts.check_dg_metrics:test_d2g_pipelines"
+check_metrics = "scripts.check_metrics:test_d2g_pipelines"
 
 [tool.poetry.scripts]
 dialogue2graph = "dialogue2graph.cli.main:cli"
