--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,11 @@ langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
 accelerate = "^1.6.0"
 unstructured = {extras = ["md"], version = "^0.17.2"}
-datasets = "^3.5.0"
+# datasets = "^3.5.0"
 psycopg2-binary = "^2.9.10"
-torch = "2.7.0"
-optimum = {extras = ["neural-compressor"], version = "^1.24.0"}
-intel-extension-for-pytorch = "^2.7.0"
+# torch = "2.7.0"
+# optimum = {extras = ["neural-compressor"], version = "^1.24.0"}
+# intel-extension-for-pytorch = "^2.7.0"
 
 [tool.poetry.group.docs]
 optional = true
