--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,13 @@ accelerate = "^1.6.0"
 unstructured = {extras = ["md"], version = "^0.17.2"}
 datasets = "^3.5.0"
 psycopg2-binary = "^2.9.10"
-# torch = "2.7.0"
-# optimum = {extras = ["neural-compressor"], version = "^1.24.0"}
+# optimum-intel = {git = "https://github.com/huggingface/optimum-intel.git", extras = ["neural-compressor"]}
+# torch = {version = "^2.7.0+cpu", source = "pytorch-cpu"}
+# torchvision = {version = "^0.22.0+cpu", source = "pytorch-cpu"}
+# torchaudio = {version = "^2.7.0+cpu", source = "pytorch-cpu"}
 # intel-extension-for-pytorch = "^2.7.0"
+# oneccl-bind-pt = {version = "^2.7.0+cpu", source = "oneccl"}
+
 
 [tool.poetry.group.docs]
 optional = true
@@ -53,15 +57,29 @@ sphinx-autoapi = "*"
 ipykernel = "^6.29.5"
 deptry = "^0.23.0"
 
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
+
+
+[[tool.poetry.source]]
+name = "oneccl"
+url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
+priority = "explicit"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
 
 [tool.poetry.group.tests]
 optional = true
