--- a/.github/workflows/check_metrics.yml
+++ b/.github/workflows/check_metrics.yml
@@ -30,5 +30,7 @@ jobs:
         env:
           SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
+          HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
         run: |
           python -m poetry run poe check_metrics || exit 1
