--- a/.github/workflows/check_metrics.yml
+++ b/.github/workflows/check_metrics.yml
@@ -13,6 +13,11 @@ concurrency:
 jobs:
   test_cov_ubuntu_latest:
     runs-on: ubuntu-latest
+    env:
+      SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
+      HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}    
     steps:
       - uses: actions/checkout@v4
 
@@ -27,10 +32,10 @@ jobs:
           python -m poetry install --with tests --no-ansi --no-interaction
 
       - name: run check_metrics
-        env:
-          SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
-          HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
+        # env:
+        #   SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
+        #   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        #   OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
+        #   HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
         run: |
           python -m poetry run poe check_metrics || exit 1
