--- a/tests/cli/cfg.yml
+++ b/tests/cli/cfg.yml
@@ -21,7 +21,7 @@ d2g_llm_grouping_llm:v1:
 d2g_llm_sim_model:v1:
   config:
     model_kwargs:
-      device: cuda:0
+      device: cpu
     model_name: BAAI/bge-m3
   model_type: HuggingFaceEmbeddings
   
