fix: restore environment variables for check_metrics step

--- a/.github/workflows/check_metrics.yml
+++ b/.github/workflows/check_metrics.yml
@@ -32,10 +32,10 @@ jobs:
           python -m poetry install --with tests --no-ansi --no-interaction
 
       - name: run check_metrics
-        # env:
-        #   SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
-        #   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        #   OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
-        #   HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
+        env:
+          SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
+          HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
         run: |
           python -m poetry run poe check_metrics || exit 1
