--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ langchain-chroma = "^0.2.2"
 langchain-huggingface = "^0.1.2"
 accelerate = "^1.6.0"
 unstructured = {extras = ["md"], version = "^0.17.2"}
+datasets = "^3.5.0"
+psycopg2-binary = "^2.9.10"
+
 
 [tool.poetry.group.docs]
 optional = true
@@ -48,14 +51,10 @@ sphinx-autoapi = "*"
 ipykernel = "^6.29.5"
 deptry = "^0.23.0"
 
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-
-
-
-
 
 
 [tool.poetry.group.lint]
@@ -63,10 +62,6 @@ optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
-
-
-
-
 
 
 [tool.poetry.group.tests]
@@ -86,6 +81,7 @@ test = "scripts.test:quick_test"
 coverage = "scripts.test:coverage"
 lint = "scripts.codestyle:_check"
 format = "scripts.codestyle:_format"
+check_metrics = "scripts.check_metrics:test_d2g_pipelines"
 
 [tool.poetry.scripts]
 dialogue2graph = "dialogue2graph.cli.main:cli"
