interactive graph vis

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ accelerate = "^1.6.0"
 unstructured = {extras = ["md"], version = "^0.17.2"}
 datasets = "^3.5.0"
 psycopg2-binary = "^2.9.10"
+gravis = "^0.1.0"
 
 
 [tool.poetry.group.docs]
@@ -57,11 +58,13 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "*"
+
 
 
 [tool.poetry.group.tests]
